--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,11 @@
-FROM hub.kce.ksyun.com/ksc-ai/ksc-ki-hub/golang:85d1774-go1.14.7 as builder
+FROM golang
 
 WORKDIR /app
 
 ENV GO111MODULE on
 ENV GOSUMDB off
 
-RUN go env -w GOPROXY=https://goproxy.cn,direct
+COPY bin/go-consumer /app
+RUN go env -w GOPROXY=https://goproxy.cn,direct && chmod +x go-consumer
 
-COPY cmd/go-consumer /app
-CMD [ "cmd/go-consumer" ]
+CMD [ "./go-consumer" ]
