update some file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 ENV GO111MODULE on
 ENV GOSUMDB off
 
-COPY bin/go-consumer /app
+COPY . /app
 RUN go env -w GOPROXY=https://goproxy.cn,direct && chmod +x go-consumer
 
 CMD [ "./go-consumer" ]
