--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,6 +6,6 @@ ENV GO111MODULE on
 ENV GOSUMDB off
 
 COPY . /app
-RUN go env -w GOPROXY=https://goproxy.cn,direct && chmod +x go-consumer
+RUN go env -w GOPROXY=https://goproxy.cn,direct
 
-CMD [ "./go-consumer" ]
+CMD [ "./bin/go-consumer" ]
