--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 ENV GO111MODULE on
 ENV GOSUMDB off
 
-COPY . /app
+COPY bin/go-consumer /app
 RUN go env -w GOPROXY=https://goproxy.cn,direct
 
 CMD [ "./bin/go-consumer" ]
